--- a/pom.xml
+++ b/pom.xml
@@ -166,5 +166,18 @@
             </plugin>
         </plugins>
     </build>
-
+ 
+ 	<developers>
+ 		<developer>
+ 			<name>Gabriele</name>
+ 			<email>gaby_sister19@hotmail.com</email>
+ 		
+ 		</developer>
+ 	
+ 	
+ 	</developers>
+ 	
+ 	
+ 	
+ 	
 </project>
